# beaver

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.cache/clangd/index/: AI.hpp.31B919E022F47EBB.idx  camera.hpp.D57F7BC61D7FF2B7.idx  core.cpp.2771201ED3228DC9.idx  core.hpp.04493438FEE5244C.idx  core.hpp.48F6B502D134B5F7.idx  core.hpp.F04CC8626001A5D3.idx  entity.hpp.51EC73575E9D0954.idx  enum_bitops.hpp.E5204D85014EB2E3.idx  event.hpp.34C6E8D8EED8CF45.idx  geometry.hpp.053EEF8120058F31.idx  geometry.hpp.A7A1EA31FFEF5F1A.idx  imconfig.h.45B78DE91AE05FD5.idx  imgui.cpp.54B3A5F69547270A.idx  imgui.h.E6EA9880FCCDDB7F.idx  imgui_draw.cpp.EFB1D6AAEEA4FCD9.idx  imgui_impl_sdl2.cpp.16D530298B33CBC0.idx  imgui_impl_sdl2.h.5D47CF972B2BAE5E.idx  imgui_impl_sdlrenderer2.cpp.BA29AF9B234CB161.idx  imgui_impl_sdlrenderer2.h.7199D41951E74686.idx  imgui_internal.h.8B76FBEE27CD08E2.idx  imgui_stdlib.cpp.D1756A06A9FC6246.idx  imgui_stdlib.h.C88884013269C394.idx  imgui_tables.cpp.278C3C26CD4FFA29.idx  imgui_widgets.cpp.3C4FDAB8524D3474.idx  imstb_rectpack.h.58D763923C4CA210.idx  imstb_textedit.h.C6CAF0148D44EEB4.idx  imstb_truetype.h.E5293D8F34D93731.idx  input.hpp.20115BB23BE07439.idx  json.hpp.9FC8F0C1FC47B676.idx  linear_algebra.hpp.23140F321A3435B7.idx  linear_algebra.hpp.BC977194258EE39A.idx  resource.hpp.4FC403EFD3EDE04B.idx  sprite.hpp.AE89B69DD1471166.idx  state.hpp.8062AE9B6DD20265.idx  test_ai.cpp.590CD11C81EDF474.idx  test_entity.cpp.83DF2481752C381C.idx  test_event.cpp.62F95D81C6D3BC66.idx  test_sdl.cpp.F5AB186B84DA1824.idx  test_state.cpp.8C46EB193125AB6A.idx  tileanimation.hpp.FBFB718B01169810.idx  (+7 more)
diagram/: architechture.puml  runtime.puml  sequence.puml
include/Beaver/: AI.hpp  camera.hpp  core.hpp  entity.hpp  enum_bitops.hpp  event.hpp  graphics.hpp  input.hpp  particles.hpp  resource.hpp  scripting.hpp  sprite.hpp  state.hpp  tile.hpp  tileanimation.hpp  time.hpp
include/beaver/: FPS.hpp  camera.hpp  core.hpp  enum_bitops.hpp  graphics.hpp  input.hpp  resource.hpp  scripting.hpp  sdlgame.hpp  sprite.hpp  tile.hpp
include/beaver/ecs/: entity.hpp
include/beaver/ecs/components/: AI.hpp  cbox.hpp  color.hpp  event.hpp  flags.hpp  flipflag.hpp  oscillation.hpp  particles.hpp  pivot.hpp  position.hpp  render.hpp  rotation.hpp  scale.hpp  state.hpp  tileanimation.hpp  time.hpp  velocity.hpp
include/beaver/ecs/systems/: animation.hpp  collision.hpp  movement.hpp  particles.hpp  render_entity.hpp
lib/: CMakeLists.txt
lib/mmath/: CMakeLists.txt
lib/mmath/include/mmath/: core.hpp  geometry.hpp  linear_algebra.hpp
lib/wrappers/: CMakeLists.txt
lib/wrappers/sdl/: CMakeLists.txt
lib/wrappers/sdl/.cache/clangd/index/: mSDL.cpp.5F6286B69D25AA70.idx  mSDL.cpp.D0F5C6688064FEE9.idx  mSDL.hpp.0C1CF24C8A7CFD8E.idx  sdlwrapper.cpp.141F6C134CB3E9B1.idx  sdlwrapper.cpp.276C21865C9617FA.idx  sdlwrapper.cpp.F975E7247E762DB2.idx  sdlwrapper.hpp.9C367FC4D94FC37F.idx  sdlwrapper.hpp.A3F156261E85A504.idx  test1.cpp.14D8E42936C009AB.idx
lib/wrappers/sdl/include/sdlwrapper/: sdlwrapper.hpp
lib/wrappers/sdl/src/: sdlwrapper.cpp
lib/wrappers/sdl/test/: CMakeLists.txt  test1.cpp
lib/wrappers/tiled/: CMakeLists.txt
lib/wrappers/tiled/include/tiledwrapper/: tiledwrapper.hpp
lib/wrappers/tiled/src/: tiledwrapper.cpp
src/Beaver/: core.cpp  graphics.cpp  scripting.cpp  state.cpp
src/beaver/: core.cpp  graphics.cpp  particles.cpp  scripting.cpp  state.cpp
src/beaver/ecs/systems/: particle.cpp
test/: CMakeLists.txt  test_ai.cpp  test_entity.cpp  test_event.cpp  test_event.hpp  test_sdl.cpp  test_state.cpp  testems.cpp  testgraphics.cpp  testscript.lua  testscripting.cpp
utilities/: testscript.lua  utilities.hpp
utilities/luamodules/: beaver.lua  geometry.lua  salt.lua
